--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,10 +1,15 @@
 server
 {
     listen
+    location test
+    {
+        allow GET
+    }
     # first server context
 }
 
-server {
+server
+{
 
     # second server context
 
