parsing almost done: see default.conf

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,16 +1,26 @@
 server
 {
-    listen
-    location test
+    listen 8080
+    server_name config_test
+    error_page 404 408 error
+    error_page 404 change_file
+        cli_max_size 2
+    location /test
     {
-        allow GET
+        allow GET POST
+        autoindex on
+        return redirection
+        index index.html
+        root test/root/
     }
     # first server context
 }
 
-server
-{
+# server
 
-    # second server context
 
-}
+
+# - ';' for location or } or server, witch attitude ?
+# - index args++
+
+# - ? can a server_name be a number (eg: "server_name  40934")
