--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,4 +1,4 @@
-server
+server;
 {
     listen 8080
     server_name config_test
@@ -18,9 +18,7 @@ server
 
 # server
 
-
-
-# - ';' for location or } or server, witch attitude ?
+# - server; segfault
 # - index args++
 
 # - ? can a server_name be a number (eg: "server_name  40934")
