--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,15 +1,15 @@
-server;
+server
 {
     listen 8080
     server_name config_test
-    error_page 404 408 error
+    error_page 404 408 error;
     error_page 404 change_file
         cli_max_size 2
     location /test
     {
-        allow GET POST
+        allow GET POST # Get allows by default
         autoindex on
-        return redirection
+        return redirection;
         index index.html
         root test/root/
     }
@@ -18,7 +18,5 @@ server;
 
 # server
 
-# - server; segfault
-# - index args++
-
+# - index args++ ?
 # - ? can a server_name be a number (eg: "server_name  40934")
