cgi pas encore compris

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -12,6 +12,7 @@ server
         return redirection;
         index index.html
         root test/root/
+        cgi php
     }
     # first server context
 }
