index accept +file

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -10,7 +10,7 @@ server
         allow GET POST # Get allows by default
         autoindex on
         return redirection;
-        index index.html
+        index index.html index.php
         root test/root/
         cgi php
     }
@@ -19,5 +19,5 @@ server
 
 # server
 
-# - index args++ ?
+# - ; dans le vide ?
 # - ? can a server_name be a number (eg: "server_name  40934")
