--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,20 +1,26 @@
 server
 {
-    listen 8080
-    server_name config_test
+    listen 8080 # 8080 by default
+    server_name config_test test1;
     error_page 404 408 error;
     error_page 404 change_file
-        cli_max_size 2
+        client_max_body_size 2
     location /test
     {
         allow GET POST # Get allows by default
         autoindex on
-        return redirection;
+        rewrite redirection;
         index index.html index.php
+        index index1.html index1.php
         root test/root/
         cgi php
     }
     # first server context
+}
+
+server
+{
+
 }
 
 # server
