--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -13,7 +13,7 @@ server
         index index.html index.php
         index index1.html index1.php
         root test/root/
-        cgi /usr/bin/php caca php 
+        cgi_pass /usr/bin/php
     }
     # first server context
 }
