cgi class implementé

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,6 +1,6 @@
 server
 {
-    listen 8080 # 8080 by default
+    listen 8081 # 8080 by default
     server_name config_test test1;
     error_page 404 408 error;
     error_page 404 change_file
@@ -13,7 +13,7 @@ server
         index index.html index.php
         index index1.html index1.php
         root test/root/
-        cgi_pass /usr/bin/php
+        cgi_pass /usr/local/bin/php-cgi # brew install php
     }
     # first server context
 }
