--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -7,7 +7,7 @@ server
         client_max_body_size 2
     location /test
     {
-        allow GET POST # Get allows by default
+        allow GET POST # GET allowed by default
         autoindex on
         rewrite redirection;
         index index.html index.php
