--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -13,7 +13,7 @@ server
         index index.html index.php
         index index1.html index1.php
         root test/root/
-        cgi_pass /usr/local/bin/php-cgi # brew install php
+        cgi_pass /Users/adbenoit/.brew/bin/php-cgi # brew install php
     }
     # first server context
 }
