--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -12,7 +12,7 @@ server
         rewrite redirection;
         index index.html index.php
         index index1.html index1.php
-        # root test/root/
+        root test/root/
         cgi php
     }
     # first server context
