path is constructed now (rewrite yet to do)

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -9,12 +9,14 @@ server
     {
         allow GET POST # GET allowed by default
         autoindex on
-        rewrite redirection;
+        # rewrite /apple.com;
         index index.html index.php
-        index index1.html index1.php
-        root test/root/
+        root /
         cgi php
     }
+    # /test/dfjh/dfkjhf/index.html
+    # /apple.com
+
     # first server context
 }
 
