--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -3,7 +3,7 @@ server
     listen 8081 # 8080 by default
     server_name config_test test1;
     error_page 404 408 error;
-    error_page 404 change_file
+    error_page 404 errror.html;
         client_max_body_size 2
     location /test
     {
