--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -3,15 +3,16 @@ server
     listen 8081 # 8080 by default
     server_name config_test test1;
     error_page 404 408 error;
-    error_page 404 errror.html;
+    error_page 404 error.html;
         client_max_body_size 2
+	
     location /test
     {
         allow GET POST # Get allows by default
         autoindex on
         # rewrite /apple.com;
         index index.html index.php
-        root /
+        # root /tes
         cgi_pass .php /Users/adbenoit/.brew/bin/php-cgi
     }
     # /test/dfjh/dfkjhf/index.html
