--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -6,28 +6,32 @@ server
     error_page 404 error.html;
         client_max_body_size 2
 	
-    location /repo1
+    location /repo2
     {
         allow GET POST # Get allows by default
         # autoindex on
         # rewrite /apple.com;
         index index.html index.php
-        # root /tes
+        # root /
         cgi_pass .php /Users/adbenoit/.brew/bin/php-cgi
     }
-    # /test/dfjh/dfkjhf/index.html
-    # /apple.com
-
-    # first server context
+    location /
+    {
+        allow GET POST POST# Get allows by default
+        autoindex on
+        cgi_pass .php /Users/adbenoit/.brew/bin/php-cgi
+    }
+    location /test
+    {
+        allow GET POST # Get allows by default
+        autoindex off
+        index index.html index.php
+        root /repo2
+        cgi_pass .php /Users/adbenoit/.brew/bin/php-cgi
+    }
 }
 
 server
 {
 	listen 8080
 }
-
-# server
-
-# - ; dans le vide ?
-# - ? can a server_name be a number (eg: "server_name  40934")
-
