--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -19,7 +19,7 @@ server
     {
         allow GET POST POST# Get allows by default
         autoindex on
-        cgi_pass .php /usr/local/bin/php-cg #/Users/adbenoit/.brew/bin/php-cgi
+        cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
     }
     location /test
     {
