--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -21,6 +21,18 @@ server
         autoindex on
         cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
     }
+    location /test_cgi/post
+    {
+        allow GET POST # Get allows by default
+        autoindex on
+        cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
+    }
+    location /test_cgi/get
+    {
+        allow GET # Get allows by default
+        autoindex on
+        cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
+    }
     location /test
     {
         allow GET POST # Get allows by default
