set status code

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -23,7 +23,7 @@ server
     }
     location /test_cgi/post
     {
-        allow GET POST # Get allows by default
+        allow GET # Get allows by default
         autoindex on
         cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
     }
