--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -21,6 +21,10 @@ server
         autoindex on
         cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
     }
+    location /test_cgi
+    {
+        autoindex on
+    }
     location /test_cgi/post
     {
         allow GET # Get allows by default
