--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -27,15 +27,15 @@ server
     }
     location /test_cgi/post
     {
-        allow GET # Get allows by default
+        allow GET POST# Get allows by default
         autoindex on
-        cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
+        cgi_pass .php /Users/Adeline/42_cursus/42_webserv/tester/php-cgi#/usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
     }
     location /test_cgi/get
     {
         allow GET # Get allows by default
         autoindex on
-        cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
+        cgi_pass .php /Users/Adeline/42_cursus/42_webserv/tester/default/cgi_tester #/usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
     }
     location /test
     {
