--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -13,13 +13,13 @@ server
         # rewrite /apple.com;
         index index.html index.php
         # root /
-        cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
+        cgi_pass .php www/bin/php-cgi
     }
     location /
     {
         allow GET POST POST# Get allows by default
         autoindex on
-        cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
+        cgi_pass .php www/bin/php-cgi
     }
     location /test_cgi
     {
@@ -29,13 +29,13 @@ server
     {
         allow GET POST# Get allows by default
         autoindex on
-        cgi_pass .php /Users/Adeline/42_cursus/42_webserv/tester/php-cgi#/usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
+        cgi_pass .php www/bin/php-cgi
     }
     location /test_cgi/get
     {
         allow GET # Get allows by default
         autoindex on
-        cgi_pass .php /Users/Adeline/42_cursus/42_webserv/tester/default/cgi_tester #/usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
+        cgi_pass .php www/bin/php-cgi
     }
     location /test
     {
@@ -43,7 +43,7 @@ server
         autoindex off
         index index.html index.php
         root /repo2
-        cgi_pass .php /usr/local/bin/php-cgi #/Users/adbenoit/.brew/bin/php-cgi
+        cgi_pass .php www/bin/php-cgi
     }
 }
 
