--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -6,7 +6,7 @@ server
     error_page 404 error.html;
         client_max_body_size 2
 	
-    location /repo2
+    location /repo2/
     {
         allow GET POST # Get allows by default
         # autoindex on
@@ -21,7 +21,7 @@ server
         autoindex on
         cgi_pass .php www/bin/php-cgi
     }
-    location /test_cgi
+    location /test_cgi/
     {
         autoindex on
     }
