cgi post de merde

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,6 +1,6 @@
 server
 {
-    listen 8080 # 8080 by default
+    listen 8081 # 8000 by default
     server_name config_test test1;
     error_page 404 408 error;
     error_page 404 error.html;
@@ -13,13 +13,13 @@ server
         # rewrite /apple.com;
         index index.html index.php
         # root /
-        cgi_pass .php www/bin/php-cgi
+        cgi_pass .php ./www/bin/php-cgi
     }
     location /
     {
         allow GET POST POST# Get allows by default
         autoindex on
-        cgi_pass .php www/bin/php-cgi
+        cgi_pass .php ./www/bin/php-cgi
     }
     location /test_cgi/
     {
@@ -29,13 +29,13 @@ server
     {
         allow GET POST# Get allows by default
         autoindex on
-        cgi_pass .php www/bin/php-cgi
+        cgi_pass .php ./www/bin/php-cgi
     }
     location /test_cgi/get
     {
         allow GET # Get allows by default
         autoindex on
-        cgi_pass .php www/bin/php-cgi
+        cgi_pass .php ./www/bin/php-cgi
     }
     location /test
     {
@@ -43,13 +43,13 @@ server
         autoindex off
         index index.html index.php
         root /repo2
-        cgi_pass .php www/bin/php-cgi
+        cgi_pass .php ./www/bin/php-cgi
     }
 }
 
 server
 {
-	listen 8081
+	listen 8080
 }
 
 # server
