--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -23,7 +23,9 @@ server
     }
     location /test_cgi/
     {
+		allow GET POST POST# Get allows by default
         autoindex on
+		cgi_pass .php ./www/bin/php-cgi
     }
     location /test_cgi/post
     {
