--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -3,7 +3,7 @@ server
     listen 8081 # 8000 by default
     server_name config_test test1;
     # error_page 404 408 error;
-    error_page 404 error.html;
+    error_page 404 error/error404.html;
         client_max_body_size 2
 	
     location /repo2/
