--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -5,7 +5,7 @@ server
     # error_page 404 408 error;
     error_page 404 error/error404.html;
         client_max_body_size 2
-	
+
     location /repo2/
     {
         allow GET POST # Get allows by default
@@ -25,6 +25,7 @@ server
     {
 		allow GET POST POST# Get allows by default
         autoindex on
+		index index.php
 		cgi_pass .php ./www/bin/php-cgi
     }
     location /test_cgi/post
