--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -6,18 +6,10 @@ server
     error_page 404 error/error404.html;
         client_max_body_size 2
 	
-    location /repo2/
-    {
-        allow GET POST # Get allows by default
-        # autoindex on
-        # rewrite /apple.com;
-        index index.html index.php
-        # root /
-        cgi_pass .php ./www/bin/php-cgi
-    }
     location /
     {
         allow GET POST POST# Get allows by default
+        root /error/
         autoindex on
         cgi_pass .php ./www/bin/php-cgi
     }
@@ -25,18 +17,23 @@ server
     {
 		allow GET POST POST# Get allows by default
         autoindex on
+        # index index.html index.php
 		cgi_pass .php ./www/bin/php-cgi
     }
     location /test_cgi/post
     {
         allow GET POST# Get allows by default
-        autoindex on
         cgi_pass .php ./www/bin/php-cgi
     }
     location /test_cgi/get
     {
         allow GET # Get allows by default
-        autoindex on
+        cgi_pass .php ./www/bin/php-cgi
+    }
+    location /test_cgi/get/
+    {
+        allow GET # Get allows by default
+        autoindex off
         cgi_pass .php ./www/bin/php-cgi
     }
     location /test
