--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -9,7 +9,6 @@ server
     location /
     {
         allow GET POST POST# Get allows by default
-        root /error/
         autoindex on
         cgi_pass .php ./www/bin/php-cgi
     }
@@ -17,6 +16,7 @@ server
     {
 		allow GET POST POST# Get allows by default
         autoindex on
+        root /test_cgi/post/
         # index index.html index.php
 		cgi_pass .php ./www/bin/php-cgi
     }
