--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -11,6 +11,7 @@ server
         allow GET POST POST# Get allows by default
         autoindex on
         cgi_pass .php ./www/bin/php-cgi
+        return 300 /www.apple.com.html
     }
     location /test_cgi/
     {
