--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -45,6 +45,10 @@ server
         root /repo2
         cgi_pass .php ./www/bin/php-cgi
     }
+    location /redirection 
+    {
+        index index301.png
+    }
 }
 
 server
