--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -17,25 +17,13 @@ server
     {
 		allow GET POST POST# Get allows by default
         autoindex on
-        root /test_cgi/post/
+        # root /test_cgi/post/
         # index index.html index.php
 		cgi_pass .php ./www/bin/php-cgi
     }
-    location /test_cgi/post
+    location /test_cgi/no_cgi_pass/
     {
-        allow GET POST# Get allows by default
-        cgi_pass .php ./www/bin/php-cgi
-    }
-    location /test_cgi/get
-    {
-        allow GET # Get allows by default
-        cgi_pass .php ./www/bin/php-cgi
-    }
-    location /test_cgi/get/
-    {
-        allow GET # Get allows by default
-        autoindex off
-        cgi_pass .php ./www/bin/php-cgi
+        autoindex on
     }
     location /test
     {
