500 if 301 redirect not found

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -10,8 +10,12 @@ server
     {
         allow GET POST POST# Get allows by default
         autoindex on
-        cgi_pass .php ./www/bin/php-cgi
+        # cgi_pass .php ./www/bin/php-cgi
         return 301 /redirection
+    }
+    location /index.php
+    {
+        cgi_pass .php ./www/bin/php-cgi
     }
     location /test_cgi/
     {
@@ -24,6 +28,7 @@ server
     location /test_cgi/no_cgi_pass/
     {
         autoindex on
+        return 301 nothing
     }
     location /test
     {
