--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -11,7 +11,7 @@ server
         allow GET POST POST# Get allows by default
         autoindex on
         # cgi_pass .php ./www/bin/php-cgi
-        return 301 /redirection
+        # return 301 /redirection
     }
     location /index.php
     {
