--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -11,7 +11,10 @@ server
         allow GET POST POST# Get allows by default
         autoindex on
         # cgi_pass .php ./www/bin/php-cgi
-        # return 301 /redirection
+    }
+    location /img.jpg
+    {
+        return 301 /redirection
     }
     location /index.php
     {
@@ -38,7 +41,7 @@ server
         root /repo2
         cgi_pass .php ./www/bin/php-cgi
     }
-    location /redirection 
+    location /redirection
     {
         index index301.png
     }
