--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -10,6 +10,7 @@ server
     {
         allow GET POST POST# Get allows by default
         autoindex on
+        upload_store /uploads
         # cgi_pass .php ./www/bin/php-cgi
     }
     location /img.jpg
