clean setContent response

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -8,7 +8,7 @@ server
 	
     location /
     {
-        allow GET POST POST# Get allows by default
+        allow GET POST POST DELETE# Get allows by default
         autoindex on
         upload_store /uploads
         # cgi_pass .php ./www/bin/php-cgi
