max body size ok

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -4,7 +4,7 @@ server
     server_name config_test test1;
     # error_page 404 408 error;
     error_page 404 error/error404.jpg;
-        client_max_body_size 2
+        # client_max_body_size 2
 	
     location /
     {
