reduce error code

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -3,12 +3,13 @@ server
     listen 8081 # 8000 by default
     server_name config_test test1;
     error_page 404 error/error404.html;
+    # error_page 403 error/error403.html;
     client_max_body_size 0
 	
     location /
     {
         allow GET POST POST DELETE # Get allows by default
-        autoindex on
+        autoindex off
         upload_store /uploads
         # cgi_pass .php ./www/bin/php-cgi
     }
