--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -9,7 +9,7 @@ server
     location /
     {
         allow GET POST POST DELETE # Get allows by default
-        autoindex off
+        autoindex on
         upload_store /uploads
         # cgi_pass .php ./www/bin/php-cgi
     }
