--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -21,7 +21,7 @@ server
 
     location /index.php
     {
-        cgi_pass .php ./www/bin/php-cgi
+        cgi_pass .php ./www/bin/php-cg
     }
 
     location /test_cgi/
