--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -11,6 +11,7 @@ server
         allow GET POST POST DELETE # Get allows by default
         autoindex on
         upload_store /uploads
+        root /test/
         # cgi_pass .php ./www/bin/php-cgi
     }
 
