--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,7 +1,7 @@
 server
 {
-	listen  0.0.0.0:8081 # 8000 by default
-	server_name config_test test1;
+	listen  8081 # 8000 by default
+	# server_name config_test test1;
 	error_page 404 error/error404.html;
 	# error_page 403 error/error403.html;
 	client_max_body_size 0
@@ -60,8 +60,8 @@ server
 
 server
 {
-	listen  0.0.0.0:8080
-    server_name test
+	listen  8080
+    # server_name test
 	location /
 	{
 		allow POST
