--- a/config_files/42.conf
+++ b/config_files/42.conf
@@ -4,45 +4,38 @@
 # - /post_body must answer anything to POST request with a maxBody of 100
 # - /directory/ must answer to GET request and the root of it would be the repository YoupiBanane and if no file are requested, it should search for youpi.bad_extension files
 
-server {
-	listen       8082;
-	server_name  localhost;
+server
+{
+	listen       8080
+	server_name  localhost
 
-	location / {
-		root www/;
-		autoindex on;
-		error_page 404 error.html;
-		allow GET;
+	location /
+	{
+		root www/
+		autoindex on
+		# error_page 404 error.html
+		allow GET
 	}
 
-	cgi_pass .bla cgi_tester POST;
+	# cgi_pass .bla cgi_tester POST
 
 	location /post_body
 	{
-		cli_max_size 100;
-		allow POST;
-		cgi_pass * ./hello_world POST;
+		# cli_max_size 100
+		allow POST
+		# cgi_pass * ./hello_world POST
 	}
 
-	location /directory
+	location /directory/
 	{
-		alias www/42_tests/YoupiBanane/;
-		allow GET POST;
-		index youpi.bad_extension;
+	# 	alias www/42_tests/YoupiBanane/
+		allow GET POST
+		index youpi.bad_extension
 	}
 
-	location /francebook/
-	{
-		root www/;
-		index index.html;
-		allow GET PUT POST DELETE;
-		cli_max_size 4;
-		cgi_pass .php /usr/local/bin/php-cgi GET POST;
-	}
-
-	location /put_test/
-	{
-		alias www/42_tests_put_target/;
-		allow PUT;
-	}
+	# location /put_test/
+	# {
+	# 	alias www/42_tests_put_target/
+	# 	allow PUT
+	# }
 }
