--- a/config_files/42.conf
+++ b/config_files/42.conf
@@ -14,7 +14,7 @@ server
 		# root www/
 		autoindex on
 		# error_page 404 error.html
-		allow GET
+		# allow GET
 	}
 
 	# cgi_pass .bla cgi_tester POST
