--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,25 +1,26 @@
 
-
 server
 {
-	listen  8081 # 8000 by default
-	# server_name config_test test1;
+	listen 127.0.0.1:8081 # 8000 by default
 	error_page 404 error/error404.html;
-	# error_page 403 error/error403.html;
+
+	server_name config_test test1;
 	client_max_body_size 0
+	# error_page 403 error/error403.html;
 	
 	location /
 	{
 		allow GET POST POST DELETE # Get allows by default
 		autoindex on
+		# index index.html index.htm index.php;
 		upload_store /uploads
-		# cgi_pass .php ./www/bin/php-cgi
+		# cgi_pass .php ./www/bin/php-cgi;
 	}
 
-	location /img.jpg
-	{
-		return 301 /redirection/301redirect.html
-	}
+	# location /img.jpg
+	# {
+	# 	return 301 /redirection/301redirect.html
+	# }
 
 	location /index.php
 	{
