--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -72,7 +72,24 @@ server
 	}
 }
 
-# server
-# {
-# 	listen 8082
-# }
+server
+{
+	listen 8082
+}
+
+server
+{
+	listen 8083
+}
+server
+{
+	listen 8081
+}
+server
+{
+	listen 8083
+}
+server
+{
+	listen 8082
+}
