--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -5,7 +5,7 @@ server
 	error_page 404 error/error404.html;
 
 	server_name config_test test1;
-	client_max_body_size 0
+	# client_max_body_size 1000
 	# error_page 403 error/error403.html;
 	
 	location /
