clean default config file + index error

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -1,95 +1,102 @@
 
 server
 {
-	listen 127.0.0.1:8081 # 8000 by default
-	error_page 404 error/error404.html;
+	listen 127.0.0.1:8081;
+	server_name webserv config1;
 
-	server_name config_test test1;
-	client_max_body_size 0
-	# error_page 403 error/error403.html;
+	error_page 404 error/error404.html;
+	client_max_body_size 0;		# unlimited
 	
 	location /
 	{
-		allow GET POST POST DELETE # Get allows by default
+		allow GET POST DELETE	# GET allows by default
 		autoindex on
-		# index index.html index.htm index.php;
-		upload_store /uploads
-		# cgi_pass .php ./www/bin/php-cgi;
+		upload_store /uploads	# if it doesn't exist: error
 	}
 
-	# location /img.jpg
-	# {
-	# 	return 301 /redirection/301redirect.html
-	# }
-
-	location /index.php
+	# Test location on file
+	location /loopInfini.php
 	{
 		cgi_pass .php ./www/bin/php-cgi
 	}
 
+	# Setup cgi location
 	location /test_cgi/
 	{
-		allow GET POST POST# Get allows by default
+		allow POST
 		autoindex on
-		# root /test_cgi/post/
-		# index index.html index.php
 		cgi_pass .php ./www/bin/php-cgi
 	}
 
+	# Unset all directives of /test_cgi/ on /test_cgi/no_cgi_pass/
 	location /test_cgi/no_cgi_pass/
 	{
 		autoindex on
 	}
 
-	location /test
+	# Test redirection
+	location /bin/cgi_tester
 	{
-		allow GET POST # Get allows by default
-		autoindex off
-		index index.html index.php
-		root /repo2
-		cgi_pass .php ./www/bin/php-cgi
+		return 301 /redirection/301redirect.html
 	}
 
+	location /bin/php-cgi
+	{
+		return 308 /redirection/308redirect.html
+	}
+
+	# Test wrong location
+	location /test1
+	{
+		allow DELETE
+	}
+
+	# Test wrong location with a right root
+	location /test2
+	{
+		root /helios/
+	}
+
+	# Test wrong index
 	location /redirection
 	{
 		index not_found
 	}
 
-	location /bin
+	# Test right index
+	location /helios
 	{
-		return 308 /redirection/308redirect.html
+		index index.html
+	}
+
+	# Test no index
+	location /error/
+	{
 	}
 }
 
+# Test same socket but different config
 server
 {
-	listen  8081
-    server_name test
+	listen  8081;
+    server_name other;
+
 	location /
 	{
 		allow POST
+		index index.html
 		cgi_pass .php ./www/bin/php-cgi
 	}
 }
 
+# Test multiple ports
 server
 {
-	listen 8082
+	listen 8082;
+	# Test no location
 }
 
 server
 {
-	listen 8083
-}
-server
-{
-	listen 8081
-}
-server
-{
-	listen 8083
-}
-server
-{
-	listen 8082
+	# Test empty block
 }
